deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8holder
  labels:
    name: k8holder
